[package]
name = "wechat-statistics"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
zstd = "0.13"
jieba-rs = "0.7"
